--- a/index.html
+++ b/index.html
@@ -22,11 +22,7 @@
             <article class="main-article">
                 <section class="article-section">
                     <p>
-                        I am a seasoned embedded systems engineer with over 7 years of experience in embedded software, hardware design and product development.
-                        Throughout my career, I have worked on numerous electronic projects across varying degrees of involvement from inception, 
-                        design, prototyping, hardware & software development, and production. Being firmly entrenched in both 
-                        hardware and software development life cycles, I am able to uniquely fit into either roles
-                        or be a bridge for both as a manager of a hybrid team of technology individuals in these two fields. 
+                        I am a seasoned embedded systems engineer with over 7 years of experience in embedded software, hardware design and product development. Throughout my career, I have worked on a number of projects across varying degrees of involvement from inception, design, prototyping, hardware and software development, and production. Some exciting projects that I have worked on are Water management IoT systems, smart automated farming systems, handheld spectrometers, pay as you go off grid appliances and air quality monitoring projects. Being firmly entrenched in both hardware and software development life cycles, I am able to uniquely fit into either role or be a bridge for both as a manager of a hybrid team of individuals in these two fields.
                     </p>
                 </section>
 
@@ -37,49 +33,25 @@
                         <li>
                             <h3>Test Driven Development</h3>
                             <p>
-                                I understand the power of incremental agile development 
-                                to eliminate or reduce unnecessary complexity in software. Catch as 
-                                many bugs as possible before they hatch through unit testing and regression 
-                                testing. This also promotes modular design hence the ability to modify 
-                                aspects of code with minimal impact to the rest of the system.
+                                I understand the power of incremental agile development to eliminate or reduce unnecessary complexity in software. Catch as many bugs as possible before they hatch through unit and regression testing. This also promotes modular design, hence the ability to modify aspects of code with minimal impact to the rest of the system.
                             </p>
                             <p>
-                                For analog and digital 
-                                circuits can be designed by breaking down the system to individually 
-                                testable subsystems and verifying their operation during development. 
-                                Leveraging automated test systems with test probes on 
-                                test pins with custom software to evaluate entire systems 
+                                Analog and digital circuits can be designed by breaking down the system to individually testable subsystems and verifying their operation during development. Leveraging automated test systems with test probes on test pins with custom software to evaluate entire systems.
                             </p>
                             <p>
-                                In general, test driven development, beyond ensuring a 
-                                high degree of system quality also comes in handy during documentation 
-                                and a deeper understanding of the system in development.
+                                In general, test driven development, beyond ensuring a high degree of system quality, also comes in handy during documentation and a deeper understanding of the system in development.
                             </p>
                         </li>
                         <li>
                             <h3>Embedded systems design and development</h3>
                             <p>
-                                System architecture including Choosing microcontrollers/microprocessors. 
-                                Designing for power budgets and power management. Sensor selection and Evaluating 
-                                COTS modules to avoid reinventing the wheel. Debugging hardware and ability to 
-                                bring up the hardware with minimal firmware for system testing.
+                                System architecture including choosing microcontrollers/microprocessors. Designing for power budgets and power management. Sensor selection and evaluating COTS modules to avoid reinventing the wheel. Debugging hardware and ability to bring up the hardware with minimal firmware for system testing. A deep understanding in design of RF systems for mesh and long range communication.
                             </p>
                         </li>
                         <li>
                             <h3>Embedded software development</h3>
                             <p>
-                                Embedded software architecture and implementation in various programming languages 
-                                leveraging my experience using a variety of industry leading microcontrollers. 
-                                Experience using hardware level communication protocols such as I2C, SPI, UART, 
-                                SMBus,CAN bus and RS232. Knowledge of circuit design puts me in a unique 
-                                position to understand how embedded software interacts with hardware at a deeper level.
-                            </p>
-                        </li>
-                        <li>
-                            <h3>Analog and digital circuit design</h3>
-                            <p>
-                                Talk about simulations and design of rf circuits and to avoid radio 
-                                frequency interference and interactions. How to design hybrid circuits 
+                                Embedded software architecture and implementation in various programming languages, leveraging my experience using a variety of industry leading microcontrollers. Experience using hardware level communication protocols such as I2C, SPI, UART, SMBus,CAN bus and RS232. Knowledge of circuit design puts me in a unique position to understand how embedded software interacts with hardware at a deeper level.
                             </p>
                         </li>
                     </ul>
@@ -90,8 +62,8 @@
                     <hr class="line-break">
                     <ul>
                         <li>Power management software for a handheld spectrometer</li>
-                        <li>Encrypted pay as you go software for offline electronic devices</li>
-                        <li>Chlorine dioxide despising and monitoring devices for sanitization of spaces</li>
+                        <li>Encrypted pay-as-you-go software for offline electronic devices</li>
+                        <li>Chlorine dioxide dispensing and monitoring devices for sanitization of spaces</li>
                         <li>Recreation of the Marantz 8b tube amplifier on a printed circuit board using modern components.</li>
                     </ul>
                 </section>
