tab icon, added github link

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <html>
-    <head>
+    <head >
+        <link rel="icon" href="img/angle-right-solid.svg">
         <meta charset="utf-8">
         <title> Clarence Alucho</title>
         <meta name="viewport" content="width=device-width, initial-scale = 1.0">
@@ -8,13 +9,14 @@
     <body>
         <nav>
             <div class="navbar">
-                <label class="logo"><a href="#" target="_blank">Clarence Alucho</a></label>
+                <label class="logo"><a href="https://clarencealucho.com/" target="_blank" rel="noopener noreferrer">Clarence Alucho</a></label>
                 <div class="nav-links">
                     <ul>
-                        <li><a href="https://forms.gle/MuiDqjj67WoRnSV56" target="_blank"><img src="img/contact.svg"></a></li>
-                        <li><a href="https://www.linkedin.com/in/alucho/" target="_blank"><img src="img/linkedin.svg"></a></li>
-                        <li><a href="https://www.upwork.com/freelancers/~01eb9c73c76fda3bea" target="_blank"><img src="img/upwork.svg"></a></li>
-                    </ul>
+                        <li><a href="https://forms.gle/MuiDqjj67WoRnSV56" target="_blank" rel="noopener noreferrer"><img src="img/contact.svg"></a></li>
+                        <li><a href="https://www.linkedin.com/in/alucho/" target="_blank" rel="noopener noreferrer"><img src="img/linkedin.svg"></a></li>
+                        <li><a href="https://www.upwork.com/freelancers/~01eb9c73c76fda3bea" target="_blank" rel="noopener noreferrer"><img src="img/upwork.svg"></a></li>
+                        <li><a href="https://github.com/Omgitskillah" target="_blank" rel="noopener noreferrer"><img src="img/github-brands.svg"></a></li>
+                </ul>
                 </div>
             </div>
         </nav>
@@ -90,17 +92,18 @@
                 <article class="footer-article">
                     <section class="footer-article-section">
                         If you think I’d be a good fit for your team or project, 
-                        <a href="https://forms.gle/MuiDqjj67WoRnSV56" target="_blank">drop me a line</a> 
+                        <a href="https://forms.gle/MuiDqjj67WoRnSV56" target="_blank" rel="noopener noreferrer">drop me a line</a> 
                         or check out my profile on 
-                        <a href="https://www.upwork.com/freelancers/~01eb9c73c76fda3bea" target="_blank">Upwork</a>.
+                        <a href="https://www.upwork.com/freelancers/~01eb9c73c76fda3bea" target="_blank" rel="noopener noreferrer">Upwork</a>.
                     </section>
                 </article>
             </div>
             <div class="nav-links-footer">
                 <ul>
-                    <li><a href="https://forms.gle/MuiDqjj67WoRnSV56" target="_blank"><img src="img/contact-dark.svg"></a></li>
-                    <li><a href="https://www.linkedin.com/in/alucho/" target="_blank"><img src="img/linkedin-dark.svg"></a></li>
-                    <li><a href="https://www.upwork.com/freelancers/~01eb9c73c76fda3bea" target="_blank"><img src="img/upwork-dark.svg"></a></li>
+                    <li><a href="https://forms.gle/MuiDqjj67WoRnSV56" target="_blank" rel="noopener noreferrer"><img src="img/contact-dark.svg"></a></li>
+                    <li><a href="https://www.linkedin.com/in/alucho/" target="_blank" rel="noopener noreferrer"><img src="img/linkedin-dark.svg"></a></li>
+                    <li><a href="https://www.upwork.com/freelancers/~01eb9c73c76fda3bea" target="_blank" rel="noopener noreferrer"><img src="img/upwork-dark.svg"></a></li>
+                    <li><a href="https://github.com/Omgitskillah" target="_blank" rel="noopener noreferrer"><img src="img/github-brands-dark.svg"></a></li>
                 </ul>
             </div>
         </div>
